micro-istio/http/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-micro-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-micro
spec:
  hosts:
  - "*"
  gateways:
  - go-micro-gateway
  http:
  - match:
    - uri:
        exact: /example/call
    route:
    - destination:
        host: go-micro-api-sample
        port:
          number: 9080
